<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/header"
android:layout_width="match_parent"
android:layout_height="match_parent" >

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/verticalScrollView"
    android:scrollbars="none" >
	
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtLabel3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabel2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/textView2"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txtLabel4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtLabel3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textview_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/textView3"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txtLabel2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtLabel3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/txtLabel3"
        android:layout_marginTop="70dp"
        android:background="@drawable/textview_bg"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/textView1"
        android:textSize="16dp" />

</RelativeLayout>
</ScrollView>

	<TextView
	    android:id="@+id/headerBack"
	    android:layout_width="fill_parent"
	    android:layout_height="65sp"
	    android:background="@drawable/header_bg" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/txtLabel1"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_home" />

    <TextView
        android:id="@+id/txtLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="News Feed"
        android:textSize="16dp" />

</RelativeLayout>